Add full workflows

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VERSION=1.0.0
-PLATFORM=linux/arm64
+# Default docker compose profile
+COMPOSE_PROFILES=package
 CCACHE_DIR=/ccache
-COMPOSE_PROFILES=platform
+PLATFORM=
