--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
+# Default platform is host default
+PLATFORM=
 # Default docker compose profile
 COMPOSE_PROFILES=package
+# Optional ccache
 CCACHE_DIR=/ccache
-PLATFORM=
