Replace logic with call to cmake_host_system_information()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ endif()
 # Determine distribution
 # Does not work for all distributions, but does work for supported Linux distributions
 if(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
-    file(STRINGS /etc/os-release DISTRO REGEX "^NAME=")
+    cmake_host_system_information(RESULT DISTRO QUERY DISTRIB_NAME)
 endif()
 
 # Fedora and CentOS do not put /usr/local/{bin,lib64} on the default search paths
