Fix workflow to use correct path when selecting files to upload

--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -95,14 +95,10 @@ jobs:
         with:
           name: installers
           path: |
-            # build/dist/*.msi
-            # build/dist/*.zip
-            # build/dist/*.exe
-            # build/dist/*.nupkg
-            build/*.msi
-            build/*.zip
-            build/*.exe
-            build/*.nupkg
+            build/dist/*.msi
+            build/dist/*.zip
+            build/dist/*.exe
+            build/dist/*.nupkg
 
       # - name: Install from build
       #   working-directory: build
