Add option to turn on debug parser

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -80,6 +80,10 @@ target_include_directories(parser SYSTEM PUBLIC ${antlrsrc_SOURCE_DIR}/lib/cpp)
 target_include_directories(parser PRIVATE . ${CMAKE_GENERATED_SOURCE_DIR} PUBLIC . SYSTEM PUBLIC ${CMAKE_GENERATED_SOURCE_DIR})
 target_link_libraries(parser PRIVATE LibXml2::LibXml2 antlr)
 target_include_directories(parser PRIVATE $<TARGET_PROPERTY:TinySHA1,INTERFACE_INCLUDE_DIRECTORIES>)
+option(SRCML_DEBUG_PARSER "Debug the srcML Parser" OFF)
+if(SRCML_DEBUG_PARSER)
+    target_compile_definitions(parser PRIVATE SRCML_DEBUG_PARSER)
+endif()
 
 # PreCompiled Headers configuration of the parser
 if (SRCML_PARSER_PCH)
